--- a/.gitignore
+++ b/.gitignore
@@ -1,45 +1,50 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-
-# dependencies
+# Node dependencies
 /node_modules
 /.pnp
 .pnp.*
+
+# Yarn / pnpm
 .yarn/*
 !.yarn/patches
 !.yarn/plugins
 !.yarn/releases
 !.yarn/versions
-
-# testing
-/coverage
-
-# next.js
-/.next/
-/out/
-
-# production
-/build
-
-# misc
-.DS_Store
-*.pem
-
-# debug
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
 .pnpm-debug.log*
 
-# vercel
-.vercel
+# Build outputs
+/.next/
+/out/
+/build
 
-# typescript
+# Coverage reports
+/coverage
+
+# TypeScript
 *.tsbuildinfo
 next-env.d.ts
 
-.genkit/*
-.env*
-
-# firebase
+# Firebase
 firebase-debug.log
 firestore-debug.log
+.genkit/*
+
+# Environment files
+.env
+.env.*.local
+
+# Misc system files
+.DS_Store
+*.pem
+
+# Logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Hosting
+.vercel
+
+# Editor configs (optional)
+.vscode/*
+.idea/
+*.swp
